# rus_mus_srb_bot

./: .env  .env.web  .gitignore  CLAUDE.md  README.md  category_admin.command  category_admin.py  dev 2.db  dev.db  dev.db-shm  dev.db-wal  dev.sqbpro  gen_token.py  pyproject.toml  return_to_search_fix.patch  run_all.command  run_all_sep.command  run_all_windows_two_tabs.ps1  run_all_windows_two_windows.cmd  start_bot_windows.cmd
.claude/: launch.json
app/: admin_ids.py  analytics.py  campaigns.py  database.py  db_path.py  events_meta.py  features.py  fsm_cleanup_worker.py  fsm_storage.py  keyboards.py  lifecycle.py  lifecycle_worker.py  main.py  models.py  moderation.py  seed_db.py  seed_items.py  seed_listings.py  seed_vacancies.py  single_instance.py  states.py  texts.py
app/ai/: codex_client.py
app/analytics/: __init__.py  listing_views.py  search_log.py
app/routers/: admin_analytics.py  admin_fields.py  admin_panel.py  artists.py  catalog_add.py  catalog_view.py  codex_review.py  contact.py  events_add.py  events_admin.py  sell.py  (+25 more)
deploy/: bot.env.example
docs/: catalog_v2_plan.md  monetization_plan.md  monetization_review_claude.md
scripts/: backup_db.py  migrate_catalog_v2.py  migrate_release_fks.py  restart_admin.sh  restart_bot.sh  smoke_check.py
tests/: test_admin_web_regressions.py  test_audit_package_fixes.py  test_category_admin_db.py  test_category_admin_feedback.py  test_deploy_integrity_regressions.py  test_events_regressions.py  test_feedback_reply.py  test_fsm_storage.py  test_listing_form_regressions.py  test_music_release_regressions.py
(+20 files in other folders)
